# nepta-core

./: .gitattributes  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile-pytest  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  nepta.py  pip.conf  pyproject.toml  setup.cfg  setup.py  tox.ini  versioneer.py
.githooks/: pre-commit
example_config/: __init__.py  defaults.py  host_settings.py  my_conf.py
nepta/core/: __init__.py  __main__.py  _version.py  synchronization.py
nepta/core/distribution/: __init__.py  command.py  components.py  conf_files.py  env.py
nepta/core/distribution/utils/: attero.py  fs.py  network.py  perf.py  rhts.py  rstrnt.py  system.py  tuna.py  virt.py
nepta/core/model/: attachments.py  bundles.py  docker.py  network.py  schedule.py  system.py  tag.py
nepta/core/scenarios/: __init__.py
nepta/core/scenarios/generic/: congestion.py  interrupts.py  interupts.py  parallel.py  scenario.py
nepta/core/scenarios/iperf3/: __init__.py  congestion.py  generic.py  mpstat.py  parallel.py  sctp.py  stream.py  tcp.py  udp.py  zero_copy.py
nepta/core/scenarios/netperf/: __init__.py  rr.py  stream.py
nepta/core/scenarios/perun/: bpf.py  generic.py  iperf3.py  perf.py
nepta/core/scenarios/sockperf/: generic.py  ping_pong.py
nepta/core/scenarios/ubench/: generic.py
nepta/core/scripts/: perfqe-install-kernel  wrapper.py
nepta/core/scripts/perun/: generate_machine_info
nepta/core/strategies/: generic.py  prepare.py  report.py  run.py  setup.py  submit.py  sync.py
nepta/core/strategies/save/: __init__.py  attachments.py  logs.py  meta.py  save_package.py
nepta/core/strategies/setup/: __init__.py  generic.py  network.py  packages.py  system.py  virt.py
nepta/core/templates/conf_templates/: bridge_tap.jinja2  chrony.jinja  chrony.jinja2  ipsec_conn.jinja  ipsec_conn.jinja2  ipsec_rhel8_conn.jinja2  kernel_options.jinja2  ovs_tap.jinja2  ovs_vlan_tap.jinja2  repo.jinja2  route.jinja  route.jinja2  udev_rule_line.jinja  udev_rule_line.jinja2  wireguard_conn.jinja2
nepta/core/templates/conf_templates/ifcfg/: bond_master.jinja2  bond_slave.jinja2  bridge.jinja2  ethernet.jinja2  generic.jinja  generic.jinja2  ovs_int_port.jinja2  team_master.jinja2  team_slave.jinja2  vlan.jinja2
nepta/core/templates/conf_templates/nm-keyfiles/: bond_master.jinja2  bond_slave.jinja2  bridge.jinja2  ethernet.jinja2  generic.jinja2  macsec.jinja2  team_master.jinja2  team_slave.jinja2  vlan.jinja2
nepta/core/tests/: __init__.py  bpf.py  cmd_tool.py  iperf3.py  mpstat.py  netperf.py  sockperf.py
nepta/core/utils/: rhts.py  system.py
scripts/: reportVulnerabilities
testing/: __main__.py  _version.py
testing/distribution/: components.py  conf_files.py  env.py
testing/model/: __init__.py  attachments.py  bundles.py  docker.py  network.py  schedule.py  system.py
testing/scenarios/generic/: congestion.py  scenario.py
testing/scenarios/netperf/: stream.py
testing/strategies/: __init__.py  prepare.py  run.py  submit.py  sync.py
testing/strategies/save/: attachments.py  meta.py
testing/templates/conf_templates/: ipsec_secret.jinja  ovs_tap.jinja  ovs_vlan_tap.jinja
testing/templates/conf_templates/ifcfg/: bond_master.jinja  bond_slave.jinja  bridge.jinja  ethernet.jinja  team_master.jinja  team_slave.jinja  vlan.jinja
testing/tests/: __init__.py
unittests/distribution/: cmd_test.py  utils_test.py  xfrm_example.txt
unittests/distribution/conf_files/: chrony_test.py  ifcfg_test.py  ipsec_test.py  misc_test.py  nmkeyfiles_test.py  route_test.py  udev_test.py  virt_int_test.py  wiregaurd_test.py
unittests/distribution/env/: basic_test.py
unittests/distribution/perf_ping/: test.perf-folded-test
unittests/model/: bundles_test.py  docker_test.py  network_test.py  path_test.py  system.py  system_test.py
unittests/scenarios/: example_interrupt_out.txt  irqbalance_check_test.py
unittests/strategies/: test_call.py  test_join.py
unittests/tests/: .test_iperf3.py.swp  iperf3.py  sample_json.json  test_iperf3.py  test_mpstat.py
unittests/tests/mpstat_out/: 4-cores.json  all-cores.json  no-cpu.json  single-core.json
